@@ -7,6 +7,7 @@ namespace PathOfModifiers.Rarities
     public class ArmorLegendary : Rarity
     {
         public override float weight => 0.1f;
+        public override byte minAffixes => 2;
         public override byte maxAffixes => 3;
         public override byte maxPrefixes => 2;
         public override byte maxSuffixes => 2;
