@@ -7,6 +7,7 @@ namespace PathOfModifiers.Rarities
     public class WeaponLegendary : Rarity
     {
         public override float weight => 0.1f;
+        public override byte minAffixes => 4;
         public override byte maxAffixes => 7;
         public override byte maxPrefixes => 5;
         public override byte maxSuffixes => 4;
