@@ -7,6 +7,7 @@ namespace PathOfModifiers.Rarities
     public class WeaponRare : Rarity
     {
         public override float weight => 0.5f;
+        public override byte minAffixes => 2;
         public override byte maxAffixes => 4;
         public override byte maxPrefixes => 3;
         public override byte maxSuffixes => 2;
